--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   <properties>
     <revision>0.0.1-SNAPSHOT</revision>
     <scm.repo.detail>org.eclipse.daanse.report</scm.repo.detail>
-<!--    <bnd.version>7.1.0-SNAPSHOT</bnd.version>-->
+    <!--    <bnd.version>7.1.0-SNAPSHOT</bnd.version>-->
     <gecko.emf.version>6.1.3</gecko.emf.version>
     <gecko.emf.version>6.1.3</gecko.emf.version>
     <emf.common.version>2.30.0</emf.common.version>
@@ -38,8 +38,9 @@
 
 
   <modules>
-
-
+    <module>pdf.assertion.api</module>
+    <module>pdf.assertion.core</module>
+    <module>pdf.assertion.assertj</module>
   </modules>
 
 </project>
