pdf template api and emf setup
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
     <module>pdf.assertion.api</module>
     <module>pdf.assertion.core</module>
     <module>pdf.assertion.assertj</module>
+    <module>pdf.template.api</module>
+    <module>pdf.template.emf</module>
   </modules>
 
 </project>
